<resources>
    <string name="app_name">Shows</string>

    <string name="content_description">login_image</string>
    <string name="input_credentials">In order to continue please log in</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="no_reviews_yet">No reviews yet.</string>
    <string name="add_a_review">Add a review</string>
    <string name="your_shows_are_not_showing_get_it">Your shows are not showing, get it?</string>
    <string name="shows">Shows</string>
    <string name="write_a_review">Write a review</string>
    <string name="write_a_review_hint">Write a review</string>
    <string name="submit">submit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remember_me">Remember me</string>
    <string name="register">Register</string>
    <string name="please_wait">Please wait</string>
    <string name="repeat_password">Repeat password</string>
    <string name="review_details">%1s REVIEWS, %2s AVERAGE</string>
</resources>