<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    >



    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_purple"
        tools:context=".LoginActivity"
        >


        <ImageView
            android:id="@+id/IV_top_left_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/top_left_illustration_login_screen"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/content_description"
            />

        <ImageView
            android:id="@+id/IV_top_right_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/top_right_illustration_login_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_description"
            />

        <ImageView
            android:id="@+id/IV_triangle_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/IV_triangle_login_margin_start"
            android:layout_marginTop="@dimen/IV_triangle_login_margin_top"
            android:src="@drawable/triangle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/TV_shows_margin_start"
            android:layout_marginTop="@dimen/TV_shows_margin_top"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/TV_shows_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/IV_triangle_login"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/ET_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="@dimen/ET_login_text_size"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/ET_login_margin_top"
            android:layout_marginStart="@dimen/ET_login_margin_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/IV_triangle_login"
            />

        <TextView
            android:id="@+id/ET_please_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_credentials"
            android:textSize="@dimen/ET_please_login_text_size"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/ET_please_login_margin_top"
            android:layout_marginStart="@dimen/ET_please_login_margin_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ET_login"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_email_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/TIL_email_login_margin_top"
            android:layout_marginEnd="@dimen/TIL_email_login_margin_end"
            android:layout_marginStart="@dimen/TIL_email_login_margin_start"
            android:hint="@string/email"
            app:boxStrokeColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ET_please_log_in"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/white"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="@dimen/ET_email_login_text_size"
                android:maxLength="35"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_password_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/TIL_password_login_margin_top"
            android:layout_marginEnd="@dimen/TIL_password_login_margin_end"
            android:layout_marginStart="@dimen/TIL_password_login_margin_start"
            app:passwordToggleEnabled="true"
            app:endIconMode="password_toggle"
            android:hint="@string/password"
            app:boxStrokeColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TIL_email_login"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:boxStrokeColor="@color/white"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="@dimen/ET_password_login_text_size"
                android:maxLength="25"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- for this button I had to add the TopToBottomOf constraint because if I put BottomToBottomOf it would mess up the Scroll view -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/TIL_password_login"
            android:background="@drawable/rounded_button_login_toggled_on"
            android:enabled="false"
            android:layout_marginStart="@dimen/button_login_margin_start"
            android:layout_marginEnd="@dimen/button_login_margin_end"
            android:layout_marginTop="@dimen/button_login_margin_top"
            android:textAllCaps="false"
            android:text="@string/login"
            android:textSize="@dimen/button_login_text_size"
            android:textColor="@drawable/button_text_color_login"
            android:textStyle="bold"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>