<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_purple"
        tools:context=".activities.LoginActivity">


        <ImageView
            android:id="@+id/topLeftRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description"
            android:src="@drawable/top_left_illustration_login_screen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/topRightRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description"
            android:src="@drawable/top_right_illustration_login_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/triangleRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="172dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/triangle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_2x"
            android:layout_marginTop="@dimen/spacing_22x"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/spacing_text_4x"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/triangleRegister"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_3x"
            android:layout_marginTop="@dimen/spacing_10x"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/spacing_text_4x"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/triangleRegister" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailRegister"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_3x"
            android:layout_marginTop="@dimen/spacing_2x"
            android:layout_marginEnd="@dimen/spacing_3x"
            android:backgroundTint="@color/white"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/text_input_layout_login_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailRegisterText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="35"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/spacing_text_2x"
                app:boxStrokeColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordRegister"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_3x"
            android:layout_marginTop="@dimen/spacing_2x"
            android:layout_marginEnd="@dimen/spacing_3x"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/text_input_layout_login_color"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailRegister"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordRegisterText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="25"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/spacing_text_2x"
                app:boxStrokeColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeatPasswordRegister"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_3x"
            android:layout_marginTop="@dimen/spacing_2x"
            android:layout_marginEnd="@dimen/spacing_3x"
            android:hint="@string/repeat_password"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/text_input_layout_login_color"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordRegister"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeatPasswordRegisterText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="25"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/spacing_text_2x"
                app:boxStrokeColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>



        <!-- for this button I had to add the TopToBottomOf constraint because if I put BottomToBottomOf it would mess up the Scroll view -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_3x"
            android:layout_marginTop="@dimen/spacing_13x"
            android:layout_marginEnd="@dimen/spacing_3x"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/spacing_text_2x"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/repeatPasswordRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>