<?xml version="1.0" encoding="utf-8"?>

<<<<<<< HEAD
<<<<<<< HEAD:app/src/main/res/layout/fragment_login.xml
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
=======
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
>>>>>>> assignment3:app/src/main/res/layout/activity_login.xml
=======
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
>>>>>>> 3383594288d698aa1b10fface7d07f828e03ff77
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_purple"
<<<<<<< HEAD
<<<<<<< HEAD:app/src/main/res/layout/fragment_login.xml
        tools:context=".activities.LoginActivity">
=======
        tools:context=".LoginActivity">
>>>>>>> assignment3:app/src/main/res/layout/activity_login.xml
=======
        tools:context=".activities.LoginActivity">
>>>>>>> 3383594288d698aa1b10fface7d07f828e03ff77


        <ImageView
            android:id="@+id/topLeftLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description"
            android:src="@drawable/top_left_illustration_login_screen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/topRightLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description"
            android:src="@drawable/top_right_illustration_login_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/triangleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="172dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/triangle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_2x"
            android:layout_marginTop="@dimen/spacing_22x"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/spacing_text_4x"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/triangleLogin"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_3x"
            android:layout_marginTop="@dimen/spacing_10x"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/spacing_text_4x"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/triangleLogin" />

        <TextView
            android:id="@+id/pleaseLogIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_3x"
            android:layout_marginTop="@dimen/spacing_3x"
            android:text="@string/input_credentials"
            android:textColor="@color/white"
            android:textSize="@dimen/spacing_text_2x"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_3x"
            android:layout_marginTop="@dimen/spacing_2x"
            android:layout_marginEnd="@dimen/spacing_3x"
            android:backgroundTint="@color/white"
            android:hint="@string/email"
<<<<<<< HEAD
<<<<<<< HEAD:app/src/main/res/layout/fragment_login.xml
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/text_input_layout_login_color"
=======
            app:boxStrokeColor="@color/text_input_layout_login_color"
            android:textColorHint="@color/white"
>>>>>>> assignment3:app/src/main/res/layout/activity_login.xml
=======
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/text_input_layout_login_color"
>>>>>>> 3383594288d698aa1b10fface7d07f828e03ff77
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pleaseLogIn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailLoginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
<<<<<<< HEAD
<<<<<<< HEAD:app/src/main/res/layout/fragment_login.xml
                android:maxLength="35"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/spacing_text_2x"
                app:boxStrokeColor="@color/white" />
=======
                app:boxStrokeColor="@color/text_input_layout_login_color"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:maxLength="35"
                android:textSize="@dimen/spacing_text_2x"/>
>>>>>>> assignment3:app/src/main/res/layout/activity_login.xml
=======
                android:maxLength="35"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/spacing_text_2x"
                app:boxStrokeColor="@color/white" />
>>>>>>> 3383594288d698aa1b10fface7d07f828e03ff77
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_3x"
            android:layout_marginTop="@dimen/spacing_2x"
            android:layout_marginEnd="@dimen/spacing_3x"
            android:hint="@string/password"
            android:textColorHint="@color/white"
<<<<<<< HEAD
<<<<<<< HEAD:app/src/main/res/layout/fragment_login.xml
            app:boxStrokeColor="@color/text_input_layout_login_color"
=======
>>>>>>> assignment3:app/src/main/res/layout/activity_login.xml
=======
            app:boxStrokeColor="@color/text_input_layout_login_color"
>>>>>>> 3383594288d698aa1b10fface7d07f828e03ff77
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailLogin"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordLoginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="25"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/spacing_text_2x"
                app:boxStrokeColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- for this button I had to add the TopToBottomOf constraint because if I put BottomToBottomOf it would mess up the Scroll view -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_3x"
            android:layout_marginTop="@dimen/spacing_13x"
            android:layout_marginEnd="@dimen/spacing_3x"
            android:background="@drawable/rounded_button_login_toggled_on"
            android:enabled="false"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@drawable/button_text_color_login"
            android:textSize="@dimen/spacing_text_2x"
            android:textStyle="bold"
<<<<<<< HEAD
<<<<<<< HEAD:app/src/main/res/layout/fragment_login.xml
            app:layout_constraintTop_toBottomOf="@id/passwordLogin" />
=======
            app:layout_constraintTop_toBottomOf="@id/TIL_password_login" />
>>>>>>> assignment3:app/src/main/res/layout/activity_login.xml
=======
            app:layout_constraintTop_toBottomOf="@id/passwordLogin" />
>>>>>>> 3383594288d698aa1b10fface7d07f828e03ff77


    </androidx.constraintlayout.widget.ConstraintLayout>


<<<<<<< HEAD
<<<<<<< HEAD:app/src/main/res/layout/fragment_login.xml
</ScrollView>
=======
</androidx.core.widget.NestedScrollView>
>>>>>>> assignment3:app/src/main/res/layout/activity_login.xml
=======
</ScrollView>
>>>>>>> 3383594288d698aa1b10fface7d07f828e03ff77
